Refactoring (part 2)